---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: ????
  Bugfixes:
    - Fixed that other mods' modifications to the physical and laser damage research were being overwritten
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-09-27
  Bugfixes:
    - Fixed a crash when using the `kr-restore` command
    - Fixed a crash with Industrial Revolution v2.3.1
    - Fixed flib dependency version
    - Fixed that the tooltip for the wind turbine said it consumed 20 kW
      - Now it says 0 W instead. Not ideal, but better!
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-09-03
  Changes:
    - Automation core technology is no longer affected by the technology cost multiplier
    - K2 now converts all furnaces with the `smelting` category to assembling machines, to allow for multi-ingredient recipes
    - The K2 menu simulation is enabled by default
    - Updated translations from Crowdin
  Bugfixes:
    - Fixed that Tral's Tree Farm seed recipes were disabled if Deadlock's Stacking Beltboxes & Loaders was enabled
    - Fixed a crash when a technology doesn't have prerequisites
    - Fixed that K2's intermediate recipe doubling code was not accounting for catalysts
    - Fixed that K2's recipe multiplier function would always multiply ingredients or products with an amount range by 2
    - Fixed that the creep generator would lag horrendously if a surface with lots of pending creep generation jobs was deleted
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-06-20
  Changes:
    - Changed energy absorber error message from a chat message to a flying text with an error sound
    - Updated translations from Crowdin
  Bugfixes: