@@ -26,6 +26,9 @@ require(scripts_path .. "Construction_Drones")
 require(scripts_path .. "Flow_Control")
 require(scripts_path .. "Load-Furn")
 require(scripts_path .. "MineLiquidOres")
+-- AAI (Programmable) Vehicles
+require(scripts_path .. "aai-vehicles")
+require(scripts_path .. "aai-programmable-vehicles")
 -- Pyanodons
 require(scripts_path .. "Pyanodon")
 -- Schall Uranium Processing
